--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ defusedxml==0.4.1
 dj-database-url==0.4.1
 Django==1.9.8
 django-allauth==0.26.1
+django-settings-context-processor==0.2
 facebook-sdk==1.0.0
 gunicorn==19.6.0
 oauthlib==1.1.2
 psycopg2==2.6.2
+python-dateutil==2.5.3
 python3-openid==3.0.10
 requests==2.10.0
 requests-oauthlib==0.6.2
+six==1.10.0
 whitenoise==3.2
