--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ oauthlib==1.1.2
 psycopg2==2.6.2
 python-dateutil==2.5.3
 python3-openid==3.0.10
+pytz==2016.6.1
 requests==2.10.0
 requests-oauthlib==0.6.2
 six==1.10.0
