--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+coverage==4.2
 defusedxml==0.4.1
 dj-database-url==0.4.1
 Django==1.10.1
 django-allauth==0.27.0
+django-daterange-filter==1.3.0
 django-settings-context-processor==0.2
 facebook-sdk==2.0.0
 gunicorn==19.6.0
