--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ defusedxml==0.4.1
 dj-database-url==0.4.1
 Django==1.10.1
 django-allauth==0.27.0
+django-bootstrap-form==3.2.1
 django-daterange-filter==1.3.0
 django-jsonview==1.0.0
 django-settings-context-processor==0.2
