--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Django==1.10.1
 django-allauth==0.27.0
 django-bootstrap-form==3.2.1
 django-daterange-filter==1.3.0
-django-jsonview==1.0.0
+-e git://github.com/jessamynsmith/django-jsonview.git@f38714649eee45b7f8fc398e687b5d2bbf35cef6#egg=django_jsonview
 django-settings-context-processor==0.2
 facebook-sdk==2.0.0
 gunicorn==19.6.0
