--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,34 @@
+appdirs==1.4.3
+certifi==2018.1.18
+chardet==3.0.4
 coverage==4.2
-defusedxml==0.4.1
+defusedxml==0.5.0
 dj-database-url==0.4.1
-Django==1.10.1
-django-allauth==0.27.0
+Django==2.0.1
+django-allauth==0.34.0
 django-bootstrap-form==3.2.1
 django-daterange-filter==1.3.0
 -e git://github.com/jessamynsmith/django-jsonview.git@f38714649eee45b7f8fc398e687b5d2bbf35cef6#egg=django_jsonview
 django-settings-context-processor==0.2
 facebook-sdk==2.0.0
+flake8==3.5.0
 gunicorn==19.6.0
+idna==2.6
+mccabe==0.6.1
 mock==2.0.0
-oauthlib==1.1.2
+oauthlib==2.0.6
+packaging==16.8
 pbr==1.10.0
 psycopg2==2.6.2
+pycodestyle==2.3.1
+pyflakes==1.6.0
+pyparsing==2.2.0
 python-dateutil==2.5.3
-python3-openid==3.0.10
-pytz==2016.6.1
-requests==2.10.0
-requests-oauthlib==0.6.2
+python3-openid==3.1.0
+pytz==2017.3
+requests==2.18.4
+requests-oauthlib==0.8.0
 six==1.10.0
 unicodecsv==0.14.1
+urllib3==1.22
 whitenoise==3.2
