--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-bootstrap-form==3.2.1
 django-daterange-filter==1.3.0
 -e git://github.com/jessamynsmith/django-jsonview.git@f38714649eee45b7f8fc398e687b5d2bbf35cef6#egg=django_jsonview
 django-settings-context-processor==0.2
+djangorestframework==3.7.7
 facebook-sdk==2.0.0
 flake8==3.5.0
 gunicorn==19.6.0
