--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Django==2.1.3
 django-allauth==0.38.0
 django-bootstrap-form==3.2.1
 django-daterange-filter==1.3.0
--e git://github.com/jessamynsmith/django-jsonview.git@f38714649eee45b7f8fc398e687b5d2bbf35cef6#egg=django_jsonview
+#-e git://github.com/jessamynsmith/django-jsonview.git@d8b6e5f7edf587b0569d09c086afe0b231b79f3a#egg=django_jsonview
 django-settings-context-processor==0.2
 djangorestframework==3.7.7
 facebook-sdk==2.0.0
