--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,13 @@ chardet==3.0.4
 coverage==4.2
 defusedxml==0.5.0
 dj-database-url==0.4.1
-Django==2.1.3
+Django==2.2.12
 django-allauth==0.41.0
 django-bootstrap-form==3.2.1
 django-daterange-filter==1.3.0
 django-jsonview==1.2.0
 django-settings-context-processor==0.2
-djangorestframework==3.7.7
+djangorestframework==3.11.0
 facebook-sdk==3.1.0
 flake8==3.5.0
 gunicorn==19.6.0
@@ -27,9 +27,10 @@ pyparsing==2.2.0
 python-dateutil==2.5.3
 python3-openid==3.1.0
 pytz==2018.7
-requests==2.20.1
+requests==2.23.0
 requests-oauthlib==1.0.0
 six==1.10.0
+sqlparse==0.3.1
 unicodecsv==0.14.1
-urllib3==1.24.1
+urllib3==1.25.8
 whitenoise==3.2
