Added package-lock.json, fixed flake error, added flake configuration.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
           key: deps-py-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - restore_cache:
           key: deps-npm-{{ .Branch }}-{{ checksum "package.json" }}
+      - restore_cache:
+          key: deps-bower-{{ .Branch }}-{{ checksum "bower.json" }}
       - run:
           # https://discuss.circleci.com/t/circleci-python-docker-images-disallow-pip-install-due-to-directory-ownership/12504
           name: Install Python deps in a venv
@@ -46,6 +48,10 @@ jobs:
           key: deps-npm-{{ .Branch }}-{{ checksum "package.json" }}
           paths:
             - "node_modules"
+      - save_cache:
+          key: deps-bower-{{ .Branch }}-{{ checksum "bower.json" }}
+          paths:
+            - "bower_components"
       - run:
           command: |
             npm install
