--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 certifi==2018.10.15
 chardet==3.0.4
 coverage==4.2
+coveralls==2.0.0
 defusedxml==0.5.0
 dj-database-url==0.4.1
 Django==2.2.12
@@ -11,6 +12,7 @@ django-daterange-filter==1.3.0
 django-jsonview==1.2.0
 django-settings-context-processor==0.2
 djangorestframework==3.11.0
+docopt==0.6.2
 facebook-sdk==3.1.0
 flake8==3.5.0
 gunicorn==19.6.0
